assets/css/main.css
:root {
  color-scheme: light dark;
}

body {
  font-family: avenir next, sans-serif;
  max-width: 40rem;
  margin: 0 auto 2rem;
  padding: 2rem;
  line-height: 1.7rem;

  -webkit-font-smoothing: antialiased;
  text-wrap: pretty;
}

nav {
  display: flex;
  justify-content: center;
  gap: 2rem;
}

ul:not(nav ul) {
  padding-inline-start: 1em;
  list-style-type: "* ";
}

a {
  color: inherit;
}

code {
  font-family: courier, monospace;
}

h1,
h2,
h3 {
  margin-top: 3rem;

  a {
    text-decoration: underline;
  }
}

img {
  margin-bottom: 2rem;
}

ol li::marker {
  font-weight: bold;
}

sup {
  vertical-align: top;
  position: relative;
  top: -0.4em;
}

header:has(h1 .hero) {
  display: flex;
  justify-content: space-between;
  align-items: baseline;

  & h1 {
    margin-block: 0;
  }
}

.hero {
  text-decoration: none;

  img {
    margin-bottom: 0;
  }
}

.about-us {
  margin-top: 3rem;
  border: 1px solid;
  padding: 0 1rem;
}

.clients {
  padding: 0;
  list-style-type: none;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  justify-content: center;
  align-items: center;
}

footer {
  margin-top: 3rem;
}

footer hr {
  margin: 3rem 0;
}

.about-us form {
  margin-bottom: 1.5rem;
}

.about-us input[type=email] {
  font-size: 14px;
  margin-top: 5px;
}

.about-us input[type=submit] {
  display: inline-block;
  outline: 0;
  cursor: pointer;
  padding: 2px 10px;
  font-size: 12px;
  font-weight: 500;
  line-height: 20px;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 6px;
  color: #24292e;
  background-color: #fafbfc;
  border-color: #1b1f2326;
  margin-top: -3px;
}

.blog img {
  max-width: 100%;
  margin-bottom: 0;
}

@media (prefers-color-scheme: dark) {
  header img {
    filter: grayscale(0.75) invert(1) brightness(2);
  }
}

@media print {
  body {
    margin: 0 auto;
    padding: 0;
  }
}

